# FilletsNG

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  convert.sh  convertSVG.sh  fillets-ng.sln  fillets-ng.sln.DotSettings  fillets-ng.vcxproj  fillets-ng.vcxproj.filters  vcpkg.json
src/SDL_gfx/: SDL_gfxPrimitives.c  SDL_gfxPrimitives.h
src/effect/: Color.h  EffectDisintegrate.cpp  EffectDisintegrate.h  EffectInvisible.h  EffectMirror.cpp  EffectMirror.h  EffectNone.cpp  EffectNone.h  EffectReverse.cpp  EffectReverse.h  EffectZx.cpp  EffectZx.h  Font.cpp  Font.h  LayeredPicture.cpp  LayeredPicture.h  Outline.cpp  Outline.h  Picture.cpp  Picture.h  PixelIterator.cpp  PixelIterator.h  PixelTool.cpp  PixelTool.h  ResColorPack.h  SurfaceLock.cpp  SurfaceLock.h  SurfaceTool.cpp  SurfaceTool.h  TTFException.cpp  TTFException.h  ViewEffect.h  WavyPicture.cpp  WavyPicture.h
src/game/: Application.cpp  Application.h  GameAgent.cpp  GameAgent.h  main.cpp
src/gengine/: AgentPack.cpp  AgentPack.h  BaseAgent.cpp  BaseAgent.h  BaseException.cpp  BaseException.h  BaseListener.cpp  BaseListener.h  BaseMsg.cpp  BaseMsg.h  Dialog.cpp  Dialog.h  DialogStack.cpp  DialogStack.h  Drawable.h  DummySoundAgent.h  Environ.cpp  Environ.h  ExInfo.cpp  ExInfo.h  FsPath.cpp  FsPath.h  FsPath_boost.cpp  HelpException.h  INamed.h  ImgException.cpp  ImgException.h  InputAgent.cpp  InputAgent.h  InputHandler.cpp  InputHandler.h  InputProvider.h  IntMsg.cpp  IntMsg.h  KeyBinder.cpp  KeyBinder.h  KeyStroke.cpp  KeyStroke.h  Log.cpp  Log.h  (+68 more)
src/level/: Anim.cpp  Anim.h  ControlSym.h  Controls.cpp  Controls.h  CountAdvisor.h  Cube.cpp  Cube.h  Decor.h  DescFinder.h  Dir.cpp  Dir.h  Field.cpp  Field.h  FinderAlg.cpp  FinderAlg.h  FinderField.cpp  FinderField.h  FinderPlace.h  Goal.cpp  Goal.h  KeyControl.cpp  KeyControl.h  Landslip.cpp  Landslip.h  LayoutException.h  Level.cpp  Level.h  LevelCountDown.cpp  LevelCountDown.h  LevelInput.cpp  LevelInput.h  LevelLoading.cpp  LevelLoading.h  LevelScript.cpp  LevelScript.h  LevelStatus.cpp  LevelStatus.h  LoadException.h  MarkMask.cpp  (+38 more)
src/menu/: BezierCurves.cpp  BezierCurves.h  LevelDesc.cpp  LevelDesc.h  LevelNode.cpp  LevelNode.h  NodeDrawer.cpp  NodeDrawer.h  PedoInput.cpp  PedoInput.h  Pedometer.cpp  Pedometer.h  SolverDrawer.cpp  SolverDrawer.h  WorldBranch.cpp  WorldBranch.h  WorldInput.cpp  WorldInput.h  WorldMap.cpp  WorldMap.h  worldmap-script.cpp  worldmap-script.h
src/option/: HelpInput.cpp  HelpInput.h  MenuHelp.cpp  MenuHelp.h  MenuOptions.cpp  MenuOptions.h  OptionsInput.cpp  OptionsInput.h  RadioBox.cpp  RadioBox.h  SelectLang.cpp  SelectLang.h
src/plan/: Command.h  CommandQueue.cpp  CommandQueue.h  ConsoleInput.cpp  ConsoleInput.h  FishDialog.cpp  FishDialog.h  GameState.cpp  GameState.h  KeyConsole.cpp  KeyConsole.h  KeyDesc.cpp  KeyDesc.h  Keymap.cpp  Keymap.h  Planner.cpp  Planner.h  ScriptCmd.cpp  ScriptCmd.h  StateInput.cpp  StateInput.h  StateManager.cpp  StateManager.h  SubTitleAgent.cpp  SubTitleAgent.h  Title.cpp  Title.h  dialog-script.cpp  dialog-script.h
src/state/: DemoInput.cpp  DemoInput.h  DemoMode.cpp  DemoMode.h  GameInput.cpp  GameInput.h  MovieState.cpp  MovieState.h  PosterScroller.cpp  PosterScroller.h  PosterState.cpp  PosterState.h  SDL_Movie.h  demo-script.cpp  demo-script.h
src/widget/: HBox.cpp  HBox.h  IWidget.cpp  IWidget.h  Labels.cpp  Labels.h  Slider.cpp  Slider.h  VBox.cpp  VBox.h  WiBox.cpp  WiBox.h  WiButton.cpp  WiButton.h  WiContainer.cpp  WiContainer.h  WiLabel.cpp  WiLabel.h  WiPara.cpp  WiPara.h  WiPicture.cpp  WiPicture.h  WiSpace.h  WiStatusBar.cpp  WiStatusBar.h
